...
          googlePrimary
          onSuccess={handleSocialSignInSuccess}
          onError={handleSocialSignInError}
        />
        <SocialDivider />
        <Button
          testID="create-account-button"
          variant="secondary"
          size="lg"
          fullWidth
          label="Sign up with email"
          accessibilityLabel="Sign up with email"
          onPress={handleCreateAccount}
...
